# smiles-spectrum

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  pyproject.toml
.github/workflows/: main.yml
backend/app/: main.py
backend/app/model/: train_model.py
backend/app/models/: material_list.pkl  train_model_ir.py  train_model_mass.py
frontend/: app.py
tests/: test_api.py  test_init.py  test_model.py
