[project]
name = "smiles-spectrum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.6",
    "mypy>=1.18.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "rdkit>=2025.3.6",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "types-requests>=2.32.4.20250913",
    "types-tensorflow>=2.18.0.20250809",
    "types-tqdm>=4.67.0.20250809",
    "uvicorn>=0.37.0",
]
